tests/sksl/errors/ReservedNameHvec4.glsl
### Compilation failed:

error: 1: 'hvec4' is a reserved word
1 error
